--- a/app/src/main/res/layout/admin_group.xml
+++ b/app/src/main/res/layout/admin_group.xml
@@ -43,18 +43,18 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/groupsBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Add Groups" />
+                android:text="Groups" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/membersBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Add Members" />
+                android:text="Members" />
 
         </LinearLayout>
 
